# intetix-neft

client/intetix-neft-button/: Button.h  CMakeLists.txt  intetix-neft-button.ino
client/intetix-neft-button/cmake/Platform/: Arduino.cmake
client/intetix-neft-rfid/: CMakeLists.txt  Reader.h  intetix-neft-rfid.ino
server/: RUN_SERVER.bat  config.py  device.py  main.py  requirements.txt  requirements_dev.txt  socketio_server.py  utils.py
server/_tests/: gui_tester.py
visualization/: .gitattributes  .gitignore  README.md  RUN_VISUALIZATION.bat  package.json
visualization/src/: background.js  main.js  server.js  socket-test.js
visualization/src/assets/animation/: animasiya_ladoshka.json  checkFiguresAndProceed.json  flaskGreen.json  flaskIndicator.json  flaskRed.json  flaskYellow.json  howToStart.json  icon01.json  icon02.json  icon03.json  inactivityWarning.json  wrong.json
visualization/src/assets/css/: home.css  main.css  videoPages.css
visualization/src/components/: CheckVideo.vue  HomeButton.vue  PlayVideo.vue  WarningBlock.vue
visualization/src/mixins/: FlaskPageMixin-bak.js  FlaskPageMixin.js  InactivityMixin.js  WarningMixin.js
visualization/src/router/: index.js
visualization/src/store/: index.js
visualization/src/utils/: index.js
visualization/src/views/: BakuPage.vue  CheckBox.vue  HomePage.vue  SibirPage.vue  TimanoPage.vue
